# learning-optimizer

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
server/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  database.py  main.py  pyproject.toml  railway.toml
server/api/: dependencies.py
server/api/routes/: dialogue_session.py  feedback.py  note.py  note_revision.py  review_schedule.py
server/api/websocket/: auth.py  chat.py
server/core/: auth.py  config.py  database.py  image_signature.py
server/evals/: README.md  _judge_factory.py  compare.py  runner.py
server/evals/baselines/: note_generation_baseline.json
server/evals/calibration/: README.md  agreement.py  kappa.py  loader.py  schema.py
server/evals/datasets/: feedback_generation.jsonl  note_generation.jsonl  question_generation.jsonl  response_analysis.jsonl
server/evals/golden/: __init__.py  adapter.py  aggregate.py  checks.py  evaluator.py  judge.py  loader.py  runner.py  schema.py
server/evals/graders/: _criterion_aggregate.py  base.py  dialogue_ended_correctly.py  feedback_is_actionable.py  note_has_sections.py  note_quality_judge.py  question_quality_judge.py  response_label_match.py
server/evals/rubrics/: note_quality.yaml  question_quality.yaml
server/graph/: builder.py  checkpointer.py  llm.py  model.py  multimodal.py  output_schemas.py  prompts.example.py  prompts.py  question_prompt.py  state.py  version.py
server/graph/nodes/: _dialogue.py  generate_feedback.py  generate_note.py  learning_dialogue.py  learning_start.py  review_dialogue.py  review_start.py  update_note_and_feedback.py
server/graph/prompts/: __init__.py  _base.py  analysis.py  feedback.py  learning_planner.py  note.py  question.py  review.py
server/migrations/: env.py
server/migrations/versions/: 184053fa5cf9_change_app_table_id_columns_to_uuid.py  37c71686bc3a_add_category_to_notes.py  40d4592353e2_add_disconnect_to_dialogue_sessions_.py  5616cd0f5623_add_aspect_map_to_notes.py  7fd4c2db4312_create_dialogue_messages_table.py  8c1f4a7b9e21_add_unique_feedback_per_note.py  9a2e1f3c4b5d_add_abandoned_to_dialogue_sessions_.py  a7f3e9c1d2b4_add_graph_version_to_dialogue_sessions.py  ac5b54e9b904_create_dialogue_sessions_table.py  b8d2f4a16c37_create_dialogue_message_images_table.py  baf7e964d087_test_connection.py  be01c8c3b5d3_create_feedbacks_table.py  c3c8c7691159_add_status_to_dialogue_sessions.py  c3f1a9e2d7b8_add_manually_edited_at_to_notes.py  cc4e8454ad40_create_review_schedules_table.py  d0b7c466fc2c_create_run_traces_table.py  (+2 more)
server/observability/: llm.py  metrics.py  tracing.py
server/repositories/: dialogue_message_image_repository.py  dialogue_message_repository.py  dialogue_session_repository.py  feedback_repository.py  note_repository.py  note_revision_repository.py  review_schedule_repository.py  run_trace_repository.py
server/schemas/: dialogue_session.py  feedback.py  note.py  note_revision.py  review_schedule.py  websocket_message.py
server/services/: review_scheduler.py
server/storage/: __init__.py  base.py  local.py
server/tests/: test_auth.py  test_review_scheduler.py
(+171 files in other folders)
